# ipcalc

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TODO-ipam.md  dashboard.html
.context/: TODO.md
.githooks/: pre-commit
.github/workflows/: ci.yml  codeql.yml  release.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_cidr_parsing.rs  fuzz_contains.rs  fuzz_from_range.rs  fuzz_subnet_ops.rs
mcp-server/: jest.config.js  package-lock.json  package.json  tsconfig.json
mcp-server/src/: index.ts  ipcalc.test.ts  ipcalc.ts  tools.ts
prd/: TODO.md  prd-ipam-persistence.md
src/: api.rs  batch.rs  cli.rs  config.rs  contains.rs  error.rs  from_range.rs  ipam_api.rs  ipam_cli.rs  ipv4.rs  ipv6.rs  lib.rs  logging.rs  main.rs  mcp.rs  output.rs  subnet_generator.rs  summarize.rs  tui.rs  validation.rs
src/ipam/: config.rs  mod.rs  models.rs  operations.rs  output.rs  store.rs
src/ipam/postgres/: migrations.rs  mod.rs
src/ipam/sqlite/: migrations.rs  mod.rs
tests/: api_tests.rs  integration_tests.rs  ipam_api_tests.rs  postgres_integration.rs
