[package]
name = "ipcalc"
version = "0.13.1"
edition = "2024"
license = "MIT"
description = "A fast IPv4 and IPv6 subnet calculator CLI and API"
repository = "https://github.com/wingnut128/ipcalc"
keywords = ["ip", "subnet", "calculator", "ipv4", "ipv6"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tower-http = { version = "0.6", features = ["trace", "timeout", "cors", "set-header", "limit"] }
toml = "0.8"
csv = "1"
serde-saphyr = "0.0"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dirs = "6"
rmcp = { version = "1.1", features = ["server", "transport-io", "macros"], optional = true }
schemars = { version = "1", optional = true }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.27", optional = true }
ipnet = { version = "2", optional = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres"], optional = true }

# OpenAPI/Swagger dependencies
utoipa = { version = "5", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "9", features = ["axum"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[features]
default = ["swagger"]
swagger = ["dep:utoipa", "dep:utoipa-swagger-ui"]
tui = ["dep:ratatui", "dep:crossterm", "dep:ipnet"]
mcp = ["dep:rmcp", "dep:schemars"]
ipam-postgres = ["dep:sqlx"]

[profile.release]
lto = true
codegen-units = 1
strip = true
